[package]
name = "oss-storage-layer"
version = "0.1.0"
authors = ["mapleFU <1506118561@qq.com>"]
edition = "2018"

[dependencies]
zookeeper = "0.5"
mio = "0.6"
zmq = "0.8"
log = "0.4.6"
env_logger = "0.6.1"
protobuf = "2.5.0"
sysinfo = "0.8.4"
eventual = "0.1.7"
rocket = "0.4.1"
multipart = "0.16.1"
rocket-multipart-form-data = "0.7.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
redis = "0.10.0"
r2d2_redis = "0.9.0"
r2d2 = "*"
rocket_contrib = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"